--- a/algorithms/정수론 알고리즘.md
+++ b/algorithms/정수론 알고리즘.md
@@ -23,7 +23,7 @@ $\sqrt{p}\sqrt{q}$는 q와 같거나 크기 때문에 2에서 $\sqrt{p}\sqrt{q}$
 
 ## [에라토스테네스의 체(eratosthenes)](https://ko.wikipedia.org/wiki/%EC%97%90%EB%9D%BC%ED%86%A0%EC%8A%A4%ED%85%8C%EB%84%A4%EC%8A%A4%EC%9D%98_%EC%B2%B4)
 
-주어진 숫자 n이하의 숫자 중에서 소수를 구하는 알고리즘이다. 간단한 방법은 2 ~ n까지의 모든 숫자를 소수인지 판별하여 계산해보는 것이다. 일일이 모든 숫자를 소수 판별하는 대신에, 소수로 판별된 숫자가 있으면 
+주어진 숫자 n이하의 숫자 중에서 소수를 구하는 알고리즘이다. 간단한 방법은 2 ~ n까지의 모든 숫자를 소수인지 판별하여 계산해보는 것이다. 일일이 모든 숫자를 소수 판별하는 대신에, 소수로 판별된 숫자가 있으면 그 숫자의 
 
 
 # 소인수 분해
@@ -35,9 +35,9 @@ $n$의 소인수가 될 수 있는 수들을 하나하나 순회하면서, n의 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE3MjE0MDYwMDYsMTA1NTQ0NTQ3MiwtOT
-g5MDIzMDA1LC0xNzY4MTMxODg1LDIwMjAxMzg2MzEsMTMwOTIy
-NzA2OSwxOTAzMDM2OTk0LC0zMDMzNTcyODQsNzkwOTM5MzM0LC
-01NTI2MzA0NDksLTU1MjUzNjYzMCw0Mjk1ODgyMjcsODAxMDMy
-OTY4LDczMDk5ODExNl19
+eyJoaXN0b3J5IjpbLTEwNjg5NDc3MjMsLTE3MjE0MDYwMDYsMT
+A1NTQ0NTQ3MiwtOTg5MDIzMDA1LC0xNzY4MTMxODg1LDIwMjAx
+Mzg2MzEsMTMwOTIyNzA2OSwxOTAzMDM2OTk0LC0zMDMzNTcyOD
+QsNzkwOTM5MzM0LC01NTI2MzA0NDksLTU1MjUzNjYzMCw0Mjk1
+ODgyMjcsODAxMDMyOTY4LDczMDk5ODExNl19
 -->
