--- a/algorithms/정수론 알고리즘.md
+++ b/algorithms/정수론 알고리즘.md
@@ -23,8 +23,11 @@ $\sqrt{p}\sqrt{q}$는 q와 같거나 크기 때문에 2에서 $\sqrt{p}\sqrt{q}$
 
 ## [에라토스테네스의 체(eratosthenes)](https://ko.wikipedia.org/wiki/%EC%97%90%EB%9D%BC%ED%86%A0%EC%8A%A4%ED%85%8C%EB%84%A4%EC%8A%A4%EC%9D%98_%EC%B2%B4)
 
-주어진 숫자 n이하의 숫자 중에서 소수를 구하는 알고리즘이다. 간단한 방법은 2 ~ n까지의 모든 숫자를 소수인지 판별하여 계산해보는 것이다. 일일이 모든 숫자를 소수 판별하는 대신에, 효과적으로 소수를 구하는 방법이 바로 에라토스테네스의 체이다. 여기서 이용하는 성질은 소수인 숫자가 있으면, 그 숫자의 배수는 모두 합성수라는 성질이다. 
+주어진 숫자 n이하의 숫자 중에서 소수를 구하는 알고리즘이다. 간단한 방법은 2 ~ n까지의 모든 숫자를 소수인지 판별하여 계산해보는 것이다. 일일이 모든 숫자를 소수 판별하는 대신에, 효과적으로 소수를 구하는 방법이 바로 에라토스테네스의 체이다. 여기서 이용하는 성질은 소수인 숫자가 있으면, 그 소수의 배수는 모두 합성수라는 것이다. 
 
+![enter image description here](https://upload.wikimedia.org/wikipedia/commons/b/b9/Sieve_of_Eratosthenes_animation.gif)
+
+위 옞
 
 # 소인수 분해
 
@@ -35,10 +38,10 @@ $n$의 소인수가 될 수 있는 수들을 하나하나 순회하면서, n의 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTEzMzU2MjM1LC0xMDY4OTQ3NzIzLC0xNz
-IxNDA2MDA2LDEwNTU0NDU0NzIsLTk4OTAyMzAwNSwtMTc2ODEz
-MTg4NSwyMDIwMTM4NjMxLDEzMDkyMjcwNjksMTkwMzAzNjk5NC
-wtMzAzMzU3Mjg0LDc5MDkzOTMzNCwtNTUyNjMwNDQ5LC01NTI1
-MzY2MzAsNDI5NTg4MjI3LDgwMTAzMjk2OCw3MzA5OTgxMTZdfQ
-==
+eyJoaXN0b3J5IjpbNTgyOTUwNDc5LDExMzM1NjIzNSwtMTA2OD
+k0NzcyMywtMTcyMTQwNjAwNiwxMDU1NDQ1NDcyLC05ODkwMjMw
+MDUsLTE3NjgxMzE4ODUsMjAyMDEzODYzMSwxMzA5MjI3MDY5LD
+E5MDMwMzY5OTQsLTMwMzM1NzI4NCw3OTA5MzkzMzQsLTU1MjYz
+MDQ0OSwtNTUyNTM2NjMwLDQyOTU4ODIyNyw4MDEwMzI5NjgsNz
+MwOTk4MTE2XX0=
 -->
