--- a/algorithms/정수론 알고리즘.md
+++ b/algorithms/정수론 알고리즘.md
@@ -27,7 +27,7 @@ $\sqrt{p}\sqrt{q}$는 q와 같거나 크기 때문에 2에서 $\sqrt{p}\sqrt{q}$
 
 ![enter image description here](https://upload.wikimedia.org/wikipedia/commons/b/b9/Sieve_of_Eratosthenes_animation.gif)
 
-위 예제는 120의 수를 다루었다. 2부터 120까지 판별해야하는 후보 집합을 만든다. 그리고 2부터 시작하며 2는 소수이다. 따라서 2의 배수에 해당하는 모든 수는 합성수이기 때문에 후보집합에서 제외한다. 
+위 예제는 120의 수를 다루었다. 2부터 120까지 판별해야하는 후보 집합을 만든다. 그리고 2부터 시작하며 2는 소수이다. 따라서 2의 배수에 해당하는 모든 수는 합성수이기 때문에 후보집합에서 제외한다. 후
 
 # 소인수 분해
 
@@ -38,10 +38,10 @@ $n$의 소인수가 될 수 있는 수들을 하나하나 순회하면서, n의 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE2OTE3ODQ0OTksMTA5NzM2NTAzNSwxMT
-MzNTYyMzUsLTEwNjg5NDc3MjMsLTE3MjE0MDYwMDYsMTA1NTQ0
-NTQ3MiwtOTg5MDIzMDA1LC0xNzY4MTMxODg1LDIwMjAxMzg2Mz
-EsMTMwOTIyNzA2OSwxOTAzMDM2OTk0LC0zMDMzNTcyODQsNzkw
-OTM5MzM0LC01NTI2MzA0NDksLTU1MjUzNjYzMCw0Mjk1ODgyMj
-csODAxMDMyOTY4LDczMDk5ODExNl19
+eyJoaXN0b3J5IjpbOTIwMzU0NTk1LC0xNjkxNzg0NDk5LDEwOT
+czNjUwMzUsMTEzMzU2MjM1LC0xMDY4OTQ3NzIzLC0xNzIxNDA2
+MDA2LDEwNTU0NDU0NzIsLTk4OTAyMzAwNSwtMTc2ODEzMTg4NS
+wyMDIwMTM4NjMxLDEzMDkyMjcwNjksMTkwMzAzNjk5NCwtMzAz
+MzU3Mjg0LDc5MDkzOTMzNCwtNTUyNjMwNDQ5LC01NTI1MzY2Mz
+AsNDI5NTg4MjI3LDgwMTAzMjk2OCw3MzA5OTgxMTZdfQ==
 -->
