--- a/algorithms/정수론 알고리즘.md
+++ b/algorithms/정수론 알고리즘.md
@@ -27,7 +27,7 @@ $\sqrt{p}\sqrt{q}$는 q와 같거나 크기 때문에 2에서 $\sqrt{p}\sqrt{q}$
 
 ![enter image description here](https://upload.wikimedia.org/wikipedia/commons/b/b9/Sieve_of_Eratosthenes_animation.gif)
 
-위 예제는 120의 수를 다루었다. 2부터 120까지 판별해야하는 후보 집합을 만든다. 그리고 2부터 시작하며 2는 소수이다. 따라서 2의 배수에 해당하는 모든 수는 합성수이기 때문에 후보집합에서 제외한다. 후
+위 예제는 120의 수를 다루었다. 2부터 120까지 판별해야하는 후보 집합을 만든다. 그리고 2부터 시작하며 2는 소수이다. 따라서 2의 배수에 해당하는 모든 수는 합성수이기 때문에 후보집합에서 제외한다. 후보집합에 남아 있는 다음 수는 3이다. 3은 소수이고 3의 배수는 모두 합성수이기 때문에 마찬가지로 제외한다. 5에 대해서도 같은 과정을 반복하고 
 
 # 소인수 분해
 
@@ -38,10 +38,10 @@ $n$의 소인수가 될 수 있는 수들을 하나하나 순회하면서, n의 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbOTIwMzU0NTk1LC0xNjkxNzg0NDk5LDEwOT
-czNjUwMzUsMTEzMzU2MjM1LC0xMDY4OTQ3NzIzLC0xNzIxNDA2
-MDA2LDEwNTU0NDU0NzIsLTk4OTAyMzAwNSwtMTc2ODEzMTg4NS
-wyMDIwMTM4NjMxLDEzMDkyMjcwNjksMTkwMzAzNjk5NCwtMzAz
-MzU3Mjg0LDc5MDkzOTMzNCwtNTUyNjMwNDQ5LC01NTI1MzY2Mz
-AsNDI5NTg4MjI3LDgwMTAzMjk2OCw3MzA5OTgxMTZdfQ==
+eyJoaXN0b3J5IjpbMTk5MjQxMDgzMCwtMTY5MTc4NDQ5OSwxMD
+k3MzY1MDM1LDExMzM1NjIzNSwtMTA2ODk0NzcyMywtMTcyMTQw
+NjAwNiwxMDU1NDQ1NDcyLC05ODkwMjMwMDUsLTE3NjgxMzE4OD
+UsMjAyMDEzODYzMSwxMzA5MjI3MDY5LDE5MDMwMzY5OTQsLTMw
+MzM1NzI4NCw3OTA5MzkzMzQsLTU1MjYzMDQ0OSwtNTUyNTM2Nj
+MwLDQyOTU4ODIyNyw4MDEwMzI5NjgsNzMwOTk4MTE2XX0=
 -->
