--- a/algorithms/정수론 알고리즘.md
+++ b/algorithms/정수론 알고리즘.md
@@ -29,21 +29,19 @@ $\sqrt{p}\sqrt{q}$는 q와 같거나 크기 때문에 2에서 $\sqrt{p}\sqrt{q}$
 
 위 예제는 120의 수를 다루었다. 2부터 120까지 판별해야하는 후보 집합을 만든다. 그리고 2부터 시작하며 2는 소수이다. 따라서 2의 배수에 해당하는 모든 수는 합성수이기 때문에 후보집합에서 제외한다. 후보집합에 남아 있는 다음 수는 3이다. 3은 소수이고 3의 배수는 모두 합성수이기 때문에 마찬가지로 제외한다. 5에 대해서도 같은 과정을 반복한다. 
 
-
-
 # 소인수 분해
 
-한 합성수를 소수들의 곱으로 표현하는 방법을 찾는 소인수 분해(prime factorization)도 가끔 볼 수 있는 주제이다. $2$부터  $\sqrt{n}$ 까지 값 중에서 
-$n$의 소인수가 될 수 있는 수들을 하나하나 순회하면서, n의 약수를 찾을때마다 n을 그 숫자로 나눈다. 다시 약수를 찾는 과정을 반복해서 소인수 분해를 진행한다.
+한 합성수를 소수들의 곱으로 표현하는 방법을 찾는 소인수 분해(prime factorization)도 가끔 볼 수 있는 주제이다. $2$부터  $\sqrt{n}$ 까지 값 중에서 $n$의 소인수가 될 수 있는 수들을 하나하나 순회하면서, n의 약수를 찾을때마다 n을 그 숫자로 나눈다. 다시 약수를 찾는 과정을 반복해서 소인수 분해를 진행한다.
 
  
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE1MDE4NTQ1MTIsLTE2OTE3ODQ0OTksMT
-A5NzM2NTAzNSwxMTMzNTYyMzUsLTEwNjg5NDc3MjMsLTE3MjE0
-MDYwMDYsMTA1NTQ0NTQ3MiwtOTg5MDIzMDA1LC0xNzY4MTMxOD
-g1LDIwMjAxMzg2MzEsMTMwOTIyNzA2OSwxOTAzMDM2OTk0LC0z
-MDMzNTcyODQsNzkwOTM5MzM0LC01NTI2MzA0NDksLTU1MjUzNj
-YzMCw0Mjk1ODgyMjcsODAxMDMyOTY4LDczMDk5ODExNl19
+eyJoaXN0b3J5IjpbLTIwMzkxNjA5OTAsLTE1MDE4NTQ1MTIsLT
+E2OTE3ODQ0OTksMTA5NzM2NTAzNSwxMTMzNTYyMzUsLTEwNjg5
+NDc3MjMsLTE3MjE0MDYwMDYsMTA1NTQ0NTQ3MiwtOTg5MDIzMD
+A1LC0xNzY4MTMxODg1LDIwMjAxMzg2MzEsMTMwOTIyNzA2OSwx
+OTAzMDM2OTk0LC0zMDMzNTcyODQsNzkwOTM5MzM0LC01NTI2Mz
+A0NDksLTU1MjUzNjYzMCw0Mjk1ODgyMjcsODAxMDMyOTY4LDcz
+MDk5ODExNl19
 -->
