--- a/algorithms/알고리즘의 시간복잡도 분석(1).md
+++ b/algorithms/알고리즘의 시간복잡도 분석(1).md
@@ -15,48 +15,9 @@
 
 ## 4.2 선형 시간 알고리즘 
 
-선형시간(linear) 알고리즘
- : 입력 N(데이터의 크기)에 1:1로 비례하는 수행시간을 보이는 알고리즘
+선형시간(linear) 알고리즘은 입력 N(데이터의 크기)에 1:1로 비례하는 수행시간을 보이는 알고리즘을 말한다. 
 
-### M-이동 평균(M-moving average)
-시계열 데이터(시간에 따라 변화하는 데이터)를 관찰하는값들 관찰시 유용한 통계적 기법준. 일반적으로 특정 날짜를 기준으로 가장 최근 M일의 데이터의 평균이 그 날짜에 해당하는 M-이동 평균이다.
 
-M-이동평균을 계산은 이중 for 문으로 간단히 구현할 수 있다.
-M - 이동 평균 : 가장 최근 마지막  M개의 관찰 값의 평균
-
-for 문을 두번 사용해서 처리도 가능하다 
-``` 
-N = Ddata.size;
-for(base = 0 +i = M-1; basei < N){ // M-1번째 데이터에서 부터 시작하여 N까지 처리;, 최근 M일을 계산하는데 초기 0~M-2일까지는 계산하지 않는다.
-int s소 (M-1) - 0 + 1 = M 최소 M개의 데이터를 처리
-partialSum = 0;
-	for(j = 0; j < M; j++){ // 가장 최근 M일 
-	s평균을 구하기 위해 M개의 데이터를 처리
-	partialSum += Data[basei-j];
-	}
-double average = spartialSum / M;
-}
-```
-
-사실 M-이동중평균은 중복되는 계산을 줄임으로써 단일 for문으로 계산이 가능하다.  
-그러나 이것을 개선이 가능하다. **아이디어는 중복된 계산을 없애는것**
-0부터 M-1까지 데이터의 총합 : $Sum[0] = D[0] + D[1] + D[2] + ... + D[M-1]$
-1부터 M까지 데이터의 총합: $Sum[1] = D[1] + D[2] + ... + D[M]$
-...
-i-1부터 M+i-2까지 데이터의 총합: $Sum[i-1] = D[i-1] + D[i] + ... + D[i+M-2]$
-i부터 M+i-1까지 데이터의 총합: $Sum[i] = D[i] + D[i+1] + ... + D[i+M-1]$
-
-즉 i번째 데이터의 총합은 i-1번째 데이터의 총합에서 D[i-1]을 빼고 D[i+M-1]를 더한 값이다. $Sum[i] = Sum[i-1]- D[i-1] +D[i+M-1]$이다.  위의 아이디어를 사용하면 선형시간만에 M-이동평균을 구할 수 있다. 
-```
-for(i = 0; i < M-1; ++i) // 제일 초기의 데이터 총합
-	partialSum = D[i];
-for(i = M -1 ; i < N; ++i)
-	partialSum += D[i]
-	average = partialSum / M
-	partialSum -= D[i-(M-1)] 	
-```
-
-위와 같은 알고리즘은 선형시간(linear) 알고리즘이다. 정확한 시간복잡도는 $O(M -1 + (N-M +1))$이다.
 
 ## 4.3 선형 이하 알고리즘
 
@@ -230,9 +191,10 @@ $f(N) = Ω(nlogn)$ : 최소 $nlogn$ 그리고 최대 $nlogn$시간 복잡도를 
 $O(N^3)$ 알고리즘 : 
 최대 입력 크기를 10000($10^4$)을 주면, 1억을 초과한다.
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE4MDI0OTI3MDQsMTg5Njk1OTY2MiwtMT
-A3NTk1ODE4LDc1NzczOTYyNSwxOTIzMzQxMDc4LC0yMjA2ODk1
-OSwtMTk1Mzc5NTEyNSwtMTk4NTkxMjYyMywtNzQzMDQ2MTY1LC
-0xNjc4OTk4Njk3LDIxOTIwMzE4MSwtMTM2NjAyNDI0Nyw1NTg2
-ODg2NCwtMTU5MjA0MjAxNCwtMjc2OTg5MTJdfQ==
+eyJoaXN0b3J5IjpbMTU1OTEzNTQ3NCwtMTgwMjQ5MjcwNCwxOD
+k2OTU5NjYyLC0xMDc1OTU4MTgsNzU3NzM5NjI1LDE5MjMzNDEw
+NzgsLTIyMDY4OTU5LC0xOTUzNzk1MTI1LC0xOTg1OTEyNjIzLC
+03NDMwNDYxNjUsLTE2Nzg5OTg2OTcsMjE5MjAzMTgxLC0xMzY2
+MDI0MjQ3LDU1ODY4ODY0LC0xNTkyMDQyMDE0LC0yNzY5ODkxMl
+19
 -->
