--- a/algorithms/알고리즘의 시간복잡도 분석(1).md
+++ b/algorithms/알고리즘의 시간복잡도 분석(1).md
@@ -154,7 +154,7 @@ $N^3 = Ω(n^1) --> N^1 = O(n^3)$
 θ 표기법은 함수의 상한과 하한을 동시에 나타낸다.
 n(데이터 입력크기)에 대한 실제 연산회수 함수 $f(n)$이 존재하고, 함수 $f(n)$에 대해 $f(n) = θ(g(n))$라고 쓰는것은 아래와 같은 의미
 
-**적당히 큰 $n_0$ 보다 같거나 큰 $n$ 중에서, $|f(n)| >= C * |g(n)|$을 만족하는 상수 C가 존재한다.**
+**적당히 큰 $n_0$ 보다 같거나 큰 모든 $n$에서, $C_1 * |g(N)| <= |f(N)| <= C_2 * |g(N)|$을 만족하는 상수 C가 존재한다.**
 
 ![](https://t1.daumcdn.net/cfile/tistory/2307BA4A55979DBA23)
 ``` 
@@ -186,10 +186,10 @@ $f(N) = Ω(nlogn)$ : 최소 $nlogn$ 그리고 최대 $nlogn$시간 복잡도를 
 $O(N^3)$ 알고리즘 : 
 최대 입력 크기를 10000($10^4$)을 주면, 1억을 초과한다.
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNjI2NjQ5MDk5LC0yMTM3MzYyMjg0LDExMj
-Q4Mzk3Nyw0OTY0NDk2OTQsLTE4MDI0OTI3MDQsMTg5Njk1OTY2
-MiwtMTA3NTk1ODE4LDc1NzczOTYyNSwxOTIzMzQxMDc4LC0yMj
-A2ODk1OSwtMTk1Mzc5NTEyNSwtMTk4NTkxMjYyMywtNzQzMDQ2
-MTY1LC0xNjc4OTk4Njk3LDIxOTIwMzE4MSwtMTM2NjAyNDI0Ny
-w1NTg2ODg2NCwtMTU5MjA0MjAxNCwtMjc2OTg5MTJdfQ==
+eyJoaXN0b3J5IjpbLTExNzE5OTQyNzUsLTIxMzczNjIyODQsMT
+EyNDgzOTc3LDQ5NjQ0OTY5NCwtMTgwMjQ5MjcwNCwxODk2OTU5
+NjYyLC0xMDc1OTU4MTgsNzU3NzM5NjI1LDE5MjMzNDEwNzgsLT
+IyMDY4OTU5LC0xOTUzNzk1MTI1LC0xOTg1OTEyNjIzLC03NDMw
+NDYxNjUsLTE2Nzg5OTg2OTcsMjE5MjAzMTgxLC0xMzY2MDI0Mj
+Q3LDU1ODY4ODY0LC0xNTkyMDQyMDE0LC0yNzY5ODkxMl19
 -->
