--- a/information-technology/programming-language/java/멀티쓰레드.md
+++ b/information-technology/programming-language/java/멀티쓰레드.md
@@ -21,8 +21,9 @@ Thread 클래스는 병렬 실행이 가능한 스레드를 만들 수 있도록
 
 -   쓰레드 풀 사용
 	- 무거운 쓰레드는 미리 할당 가능
--   태스크와 쓰레드를 생성하고 관리하는 것을 분리
+-  쓰레드의 생성 및 관리
 	- 태스크(Runnable, Callable)
+	-  태스크의 생성은 사용자,
 -   쓰레드 풀안의 쓰레드는 한번에 하나씩 여러 태스크를 실행
 -   태스크 큐를 이용한 태스크 관리
 -   Executor Service를 더이상 필요 없으면 중지
@@ -76,7 +77,8 @@ execService.shutdown();
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTA5MTE3MTI4MywxMDgyNzg0Mjg1LC01OD
-MyNzA5MTAsMTQ4NjYxMzI1LC0zNjYzMzA3MDMsLTE0NTY4Mzc5
-OTQsLTg1OTk2MTIzMCw1NTk5MjkxMTMsMTMzODk1MzQ0MF19
+eyJoaXN0b3J5IjpbLTEzMzMwNjcyNjksMTA5MTE3MTI4MywxMD
+gyNzg0Mjg1LC01ODMyNzA5MTAsMTQ4NjYxMzI1LC0zNjYzMzA3
+MDMsLTE0NTY4Mzc5OTQsLTg1OTk2MTIzMCw1NTk5MjkxMTMsMT
+MzODk1MzQ0MF19
 -->
