--- a/information-technology/programming-language/java/멀티쓰레드.md
+++ b/information-technology/programming-language/java/멀티쓰레드.md
@@ -17,18 +17,11 @@ Thread 클래스는 병렬 실행이 가능한 스레드를 만들 수 있도록
 
 동시성 코드가 짜기 어려운 이유는 쓰레드가 동시 다발적으로 실행되기 때문이다. 하나의 공유 자원에 대해서 다른 쓰레드가 자원의 상태를 읽거나 수정을 하는 동안에는 해당 상태가 변경되지 않도록 락을 걸어야 한다. synchronized(object) 코드로 감싸서 한번에 스레드 하나만 코드 블록 안에서 실행 할 수 있도록 하면 스레드는 잠겨 있는 객체에 대해선 다른 쓰레드가 작업을 끝날때 까지 기다려야 함으로 성능이 떨어진다. 따라서 성능을 위해선 최대한 빨리 락을 해제하는 것이 좋다.
 
-### Features Summary
-
--  쓰레드의 생성 및 관리(Thread Pool)
-	- 사용할 쓰레드를 미리 할당
-	- Task(Runnable, Callable). 태스크의 생성은 개발자가 한다. 
--   Task 관리(Task Queue)
-
 ### ExecutorService
 
 ![enter image description here](https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=http://cfile7.uf.tistory.com/image/250ED44B58D7697A25088A)
 
-Customer라는건 Application에서 해당 ExecutorService를 사용하는 요청자이고 submit을 하게 되면, ExecutorService 내부에서 해당 작업을 내부적으로 스케쥴링 하면서 적절하게 일을 처리한다. 
+Customer는 Application에서 해당 ExecutorService를 사용하는 요청자이고 submit을 하게 되면, ExecutorService 내부에서 해당 작업을 내부적으로 스케쥴링 하면서 적절하게 일을 처리한다. 
 ExecutorService의 submit 메서드 호출시 파라미터로 task를 넘기면 ExcecutorService의 TaskQueue에서 해당 task를 관리하게 된다. 
 Task Queue에 들어온 task는 Thread Pool에서 하나의 스레드가 맡아 처리한다.
 작업 처리가 끝난 스레드는 Task Queue큐에서 새로운 task를 가져와 처리한다.
@@ -72,8 +65,8 @@ execService.shutdown();
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTExMzAyODYzMjQsMTA5MTE3MTI4MywxMD
-gyNzg0Mjg1LC01ODMyNzA5MTAsMTQ4NjYxMzI1LC0zNjYzMzA3
-MDMsLTE0NTY4Mzc5OTQsLTg1OTk2MTIzMCw1NTk5MjkxMTMsMT
-MzODk1MzQ0MF19
+eyJoaXN0b3J5IjpbLTExNTU1OTQwNTcsLTExMzAyODYzMjQsMT
+A5MTE3MTI4MywxMDgyNzg0Mjg1LC01ODMyNzA5MTAsMTQ4NjYx
+MzI1LC0zNjYzMzA3MDMsLTE0NTY4Mzc5OTQsLTg1OTk2MTIzMC
+w1NTk5MjkxMTMsMTMzODk1MzQ0MF19
 -->
