--- a/information-technology/programming-language/java/멀티쓰레드.md
+++ b/information-technology/programming-language/java/멀티쓰레드.md
@@ -20,8 +20,7 @@ Thread 클래스는 병렬 실행이 가능한 스레드를 만들 수 있도록
 ### ExecutorService
 
 ![enter image description here](https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=http://cfile7.uf.tistory.com/image/250ED44B58D7697A25088A)
-Customer는 Application에서 ExecutorService에 Task 작업 실행을 요청한다. submit을 하게 되면, ExecutorService 내부에서 해당 Task를 내부적으로 스케쥴링 하면서 적절하게 일을 처리한다. 구체적으로는 TaskQueue에서 해당 Task를 관리하게 된다. Task Queue에 들어온 task는 Thread Pool에서 하나의 스레드가 맡아 처리한다.
-작업 처리가 끝난 스레드는 Task Queue큐에서 새로운 task를 가져와 처리한다.
+Customer는 Application에서 ExecutorService에 Task 작업 실행을 요청한다. submit을 하게 되면, ExecutorService 내부에서 해당 Task를 내부적으로 스케쥴링 하면서 적절하게 일을 처리한다. 구체적으로는 TaskQueue에서 해당 Task를 관리하게 된다. Task Queue에 들어온 task는 Thread Pool에서 하나의 스레드가 맡아 처리한다. 작업 처리가 끝난 스레드는 Task Queue큐에서 새로운 task를 가져와 처리한다.
   
 submit 메서드를 보면 아래와 같은데 **Task의 종류는 Runnable과 Callable 두 가지 종류가 있다는 것을 알 수 있다.** 
 ```
@@ -62,8 +61,9 @@ execService.shutdown();
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNzE0MzI4NjEsLTExNTU1OTQwNTcsLTExMz
-AyODYzMjQsMTA5MTE3MTI4MywxMDgyNzg0Mjg1LC01ODMyNzA5
-MTAsMTQ4NjYxMzI1LC0zNjYzMzA3MDMsLTE0NTY4Mzc5OTQsLT
-g1OTk2MTIzMCw1NTk5MjkxMTMsMTMzODk1MzQ0MF19
+eyJoaXN0b3J5IjpbMzQ3NjY1NDQzLDcxNDMyODYxLC0xMTU1NT
+k0MDU3LC0xMTMwMjg2MzI0LDEwOTExNzEyODMsMTA4Mjc4NDI4
+NSwtNTgzMjcwOTEwLDE0ODY2MTMyNSwtMzY2MzMwNzAzLC0xND
+U2ODM3OTk0LC04NTk5NjEyMzAsNTU5OTI5MTEzLDEzMzg5NTM0
+NDBdfQ==
 -->
