--- a/information-technology/programming-language/java/멀티쓰레드.md
+++ b/information-technology/programming-language/java/멀티쓰레드.md
@@ -20,14 +20,17 @@ Thread 클래스는 병렬 실행이 가능한 스레드를 만들 수 있도록
 ### ExecutorService
 
 ![enter image description here](https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=http://cfile7.uf.tistory.com/image/250ED44B58D7697A25088A)
-Customer는 Application에서 ExecutorService에 Task 작업 실행을 요청한다. submit을 하게 되면, ExecutorService 내부에서 해당 Task를 내부적으로 스케쥴링 하면서 적절하게 일을 처리한다. 구체적으로는 TaskQueue에서 해당 Task를 관리하게 된다. Task Queue에 들어온 task는 Thread Pool에서 하나의 스레드가 맡아 처리한다. 작업 처리가 끝난 스레드는 Task Queue큐에서 새로운 task를 가져와 처리한다.
-  
+Customer는 Application에서 ExecutorService에 Task 작업 실행을 요청한다. submit을 하게 되면, ExecutorService 내부에서 해당 Task를 내부적으로 스케쥴링 하면서 적절하게 일을 처리한다. 
+
 submit 메서드를 보면 아래와 같은데 **Task의 종류는 Runnable과 Callable 두 가지 종류가 있다는 것을 알 수 있다.** 
 ```
 public Future<?> submit(Runnable task) {...}
 public <T> Future<T> submit(Callable<T> task) {...}
 ```
 Runnable의 run 메서드는 return값이 없다. Callable의 call 메서드는 return값이 존재한다. 따라서 Callable은 해당 작업의 결과를 반환할 수 있고, Future Object를 반환한다. Future Object는 task의 상태와 task가 끝이 났는지, 취소되었는지 확인하는 메서드를 제공하고, 작업을 취소하거나 결과를 복구할 수 있다. 
+
+구체적으로는 TaskQueue에서 해당 Task를 관리하게 된다. Task Queue에 들어온 task는 Thread Pool에서 하나의 스레드가 맡아 처리한다. 작업 처리가 끝난 스레드는 Task Queue큐에서 새로운 task를 가져와 처리한다.
+  
 
 ### Executors
 
@@ -61,9 +64,9 @@ execService.shutdown();
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMzQ3NjY1NDQzLDcxNDMyODYxLC0xMTU1NT
-k0MDU3LC0xMTMwMjg2MzI0LDEwOTExNzEyODMsMTA4Mjc4NDI4
-NSwtNTgzMjcwOTEwLDE0ODY2MTMyNSwtMzY2MzMwNzAzLC0xND
-U2ODM3OTk0LC04NTk5NjEyMzAsNTU5OTI5MTEzLDEzMzg5NTM0
-NDBdfQ==
+eyJoaXN0b3J5IjpbLTQ2MjkzNjgyMyw3MTQzMjg2MSwtMTE1NT
+U5NDA1NywtMTEzMDI4NjMyNCwxMDkxMTcxMjgzLDEwODI3ODQy
+ODUsLTU4MzI3MDkxMCwxNDg2NjEzMjUsLTM2NjMzMDcwMywtMT
+Q1NjgzNzk5NCwtODU5OTYxMjMwLDU1OTkyOTExMywxMzM4OTUz
+NDQwXX0=
 -->
