--- a/information-technology/programming-language/java/멀티쓰레드.md
+++ b/information-technology/programming-language/java/멀티쓰레드.md
@@ -1,10 +1,6 @@
 # Introduction
 
-고전적인 방법으로 쓰레드 생성시 
-
-새로운 스레드를 생성할때는 새로운 Thread객체를 생성해야 한다. 이 객체는 Runnable 인터페이스의 객체를 전달받는다. 또한 Runnable 인터페이스는 public void run()이란 메세드가 있는데, **스레드를 실행할때 이 run()메서드를 직접 호출하면 안된다.** 
-
-Thead 객체의 start메서드를 호출한 후에는 run 멧더를 호출해서 JVM에서 코드를 실행하는데 필요한 새로운 스레드를 생성한다. 
+고전적인 방법으로 쓰레드 생성을 두 가지 방법이 있다. Thread를 확장하거나 Runnable 인터페이스를 구현하는 것이다. Runnable 인터페이스는 public void run()이란 메세드가 있는데, **스레드를 실행할때 이 run()메서드를 직접 호출하면 안된다.**  대신 Thead 객체의 start메서드를 호출한 후에는 run 멧더를 호출해서 JVM에서 코드를 실행하는데 필요한 새로운 스레드를 생성한다. 
 
 Thread 클래스는 병렬 실행이 가능한 스레드를 만들 수 있도록 JVM을 호출한다는 점이 특별하다. start 메서드를 소스 코드에서 확인할 수 있다면 네이티브 메서드인 start0으로 호출하는 private 메서드 역시 확인할 수 있다.Thread 수행 순서를 결정하는 것은 전적으로  JVM이다. 
 
@@ -63,9 +59,9 @@ execService.shutdown();
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTEzNjE1MzMzMywtNDYyOTM2ODIzLDcxND
-MyODYxLC0xMTU1NTk0MDU3LC0xMTMwMjg2MzI0LDEwOTExNzEy
-ODMsMTA4Mjc4NDI4NSwtNTgzMjcwOTEwLDE0ODY2MTMyNSwtMz
-Y2MzMwNzAzLC0xNDU2ODM3OTk0LC04NTk5NjEyMzAsNTU5OTI5
-MTEzLDEzMzg5NTM0NDBdfQ==
+eyJoaXN0b3J5IjpbLTMwODI0ODk3MiwxMTM2MTUzMzMzLC00Nj
+I5MzY4MjMsNzE0MzI4NjEsLTExNTU1OTQwNTcsLTExMzAyODYz
+MjQsMTA5MTE3MTI4MywxMDgyNzg0Mjg1LC01ODMyNzA5MTAsMT
+Q4NjYxMzI1LC0zNjYzMzA3MDMsLTE0NTY4Mzc5OTQsLTg1OTk2
+MTIzMCw1NTk5MjkxMTMsMTMzODk1MzQ0MF19
 -->
