--- a/information-technology/programming-language/java/멀티쓰레드.md
+++ b/information-technology/programming-language/java/멀티쓰레드.md
@@ -1,7 +1,6 @@
 # Introduction
 
-고전적인 방법으로 쓰레드 생성을 두 가지 방법이 있다. Thread를 확장하거나 Runnable 인터페이스를 구현하는 것이다. Runnable 인터페이스는 public void run()이란 메세드가 있는데, **쓰레드를 실행할때 이 run()메서드를 직접 호출하면 안된다.**  Thread의 start메서드로 쓰레드를 실행해야 JVM에서 새로운 쓰레드를 생성한다. 
-
+고전적인 방법으로 쓰레드 생성을 두 가지 방법이 있다. Thread를 확장하거나 Runnable 인터페이스를 구현하는 것이다. 
 ```
 Thread t = new ExtendsThread(); // Thread 확장한 객체
 t.start();
@@ -11,6 +10,10 @@ Runnable r = new ImplementsThread(); // Runnable 구현한 객체
 Thread t = new Thread(r);
 t.start();
 ```
+
+새로운 쓰레드를 만들고 ㄱ**  이 run()메서드를 직접 호출하면 안된다.**  Thread의 start메서드로 쓰레드를 실행해야 JVM에서 새로운 쓰레드를 생성한다. 
+
+Main difference is that when program calls **start**() method a new **Thread** is created and code inside **run**() method is executed in new **Thread** while if you call **run**() method directly no new **Thread** is created and code inside **run**() will **execute** on current **Thread**
 
 Thread 클래스는 병렬 실행이 가능한 스레드를 만들 수 있도록 JVM을 호출한다는 점이 특별하다. start 메서드를 소스 코드에서 확인할 수 있다면 네이티브 메서드인 start메서드를 호출하는 private 메서드 역시 확인할 수 있다. Thread 수행 순서를 결정하는 것은 전적으로  JVM이다. 
 
@@ -69,10 +72,10 @@ execService.shutdown();
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTI3MjQ3MDgwNSwtMzYwNDQ0OTIxLC05Mj
-MzODAxNjIsMTEzNjE1MzMzMywtNDYyOTM2ODIzLDcxNDMyODYx
-LC0xMTU1NTk0MDU3LC0xMTMwMjg2MzI0LDEwOTExNzEyODMsMT
-A4Mjc4NDI4NSwtNTgzMjcwOTEwLDE0ODY2MTMyNSwtMzY2MzMw
-NzAzLC0xNDU2ODM3OTk0LC04NTk5NjEyMzAsNTU5OTI5MTEzLD
-EzMzg5NTM0NDBdfQ==
+eyJoaXN0b3J5IjpbLTE0ODA0OTkyNTksMTI3MjQ3MDgwNSwtMz
+YwNDQ0OTIxLC05MjMzODAxNjIsMTEzNjE1MzMzMywtNDYyOTM2
+ODIzLDcxNDMyODYxLC0xMTU1NTk0MDU3LC0xMTMwMjg2MzI0LD
+EwOTExNzEyODMsMTA4Mjc4NDI4NSwtNTgzMjcwOTEwLDE0ODY2
+MTMyNSwtMzY2MzMwNzAzLC0xNDU2ODM3OTk0LC04NTk5NjEyMz
+AsNTU5OTI5MTEzLDEzMzg5NTM0NDBdfQ==
 -->
