--- a/information-technology/programming-language/java/멀티쓰레드.md
+++ b/information-technology/programming-language/java/멀티쓰레드.md
@@ -23,9 +23,9 @@ Thread 클래스는 병렬 실행이 가능한 쓰레드를 만들 수 있도록
 
 동시성 프레임워크(Executor Framework)는 자바 4에서 도입되었고 **메모리 측면에서의 효율성 있는 동시성을 위한 여러 클래스**들을 제공한다. 
 
-쓰레드를 생성하는 과정에서는 메모리의 자원을 많이 소비하게 되는데, Executor 인터페이스는 스레드를 미리 생성하고, 그 수를 제한하며, 사용된 스레드를 재사용함으로써 효율을 높인다. 
+쓰레드를 생성하는 과정에서는 메모리의 자원을 많이 소비하게 되는데, Executor 인터페이스는 쓰레드를 미리 생성하고, 그 수를 제한하며, 사용된 쓰레드를 재사용함으로써 효율을 높인다. 
 
-동시성 코드가 짜기 어려운 이유는 쓰레드가 동시 다발적으로 실행되기 때문이다. 하나의 공유 자원에 대해서 다른 쓰레드가 자원의 상태를 읽거나 수정을 하는 동안에는 해당 상태가 변경되지 않도록 락을 걸어야 한다. synchronized(object) 코드로 감싸서 한번에 스레드 하나만 코드 블록 안에서 실행 할 수 있도록 하면 스레드는 잠겨 있는 객체에 대해선 다른 쓰레드가 작업을 끝날때 까지 기다려야 함으로 성능이 떨어진다. 따라서 성능을 위해선 최대한 빨리 락을 해제하는 것이 좋다.
+동시성 코드가 짜기 어려운 이유는 쓰레드가 동시 다발적으로 실행되기 때문이다. 하나의 공유 자원에 대해서 다른 쓰레드가 자원의 상태를 읽거나 수정을 하는 동안에는 해당 상태가 변경되지 않도록 락을 걸어야 한다. synchronized(object) 코드로 감싸서 한번에 쓰레드 하나만 코드 블록 안에서 실행 할 수 있도록 하면 쓰레드는 잠겨 있는 객체에 대해선 다른 쓰레드가 작업을 끝날때 까지 기다려야 함으로 성능이 떨어진다. 따라서 성능을 위해선 최대한 빨리 락을 해제하는 것이 좋다.
 
 ### ExecutorService
 
@@ -69,7 +69,7 @@ execService.shutdown();
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjE0MTM1NjY0MSw3MzUxODA4NDgsNzAxND
+eyJoaXN0b3J5IjpbMTM2MjY1NjEyMSw3MzUxODA4NDgsNzAxND
 M2OTY3LDg2NjgxMDMsMTI3MjQ3MDgwNSwtMzYwNDQ0OTIxLC05
 MjMzODAxNjIsMTEzNjE1MzMzMywtNDYyOTM2ODIzLDcxNDMyOD
 YxLC0xMTU1NTk0MDU3LC0xMTMwMjg2MzI0LDEwOTExNzEyODMs
